@@ -169,6 +169,7 @@ Chronological list of authors
   - Alexander Yang
   - Filip T. Szczypiński
   - Marcelo C. R. Melo
+  - Ricky Sexton
 
 
 External code
